- fixed banner spacing

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -49,6 +49,7 @@ img.background.third {
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 0;
+  padding-bottom: 5px;
   background-color: rgba(0, 0, 0, 0.65);
   color: white;
   /*border-bottom: 20px solid white;*/
@@ -69,7 +70,6 @@ a.title_link {
 
 #title {
   margin-left: 20px;
-  margin-top: 20px;
   display: inline;
   font-size: 67px;
   font-weight: 200;
@@ -82,7 +82,7 @@ a.title_link {
   font-size: 20px;
   display: inline;
   float: right;
-  margin-top: 32px;
+  margin-top: 2.7%;
   position: absolute;
   top: 0;
   right: 0;
